--- a/App/Bioscopify/app/src/main/res/layout/app_bar_main.xml
+++ b/App/Bioscopify/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rickyberg.bioscopify.MainActivity">
+    tools:context="com.example.rickyberg.bioscopify.PresentationLayer.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
