--- a/App/Bioscopify/app/src/main/res/layout/app_bar_main.xml
+++ b/App/Bioscopify/app/src/main/res/layout/app_bar_main.xml
@@ -14,15 +14,9 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="12dp"
+            android:layout_height="match_parent"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
 
     </android.support.design.widget.AppBarLayout>
 
