--- a/App/Bioscopify/app/src/main/res/layout/fragment_ticket_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/fragment_ticket_select.xml
@@ -125,11 +125,13 @@
         android:id="@+id/juniorTicketsEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
+        android:text="0"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/juniorPriceTv"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
@@ -138,11 +140,13 @@
         android:id="@+id/normalTicketsEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
+        android:text="0"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/normalPriceTv"
         app:layout_constraintTop_toBottomOf="@+id/juniorTicketsEt" />
@@ -151,11 +155,13 @@
         android:id="@+id/seniorTicketsEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
+        android:text="0"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/seniorPriceTv"
         app:layout_constraintTop_toBottomOf="@+id/normalTicketsEt" />
