Changed menu to fragments, added favourite activity

--- a/App/Bioscopify/app/src/main/res/menu/activity_main_drawer.xml
+++ b/App/Bioscopify/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_movies"
+            android:icon="@drawable/ic_movie_black"
             android:title="Movies" />
         <item
             android:id="@+id/nav_favorite"
+            android:icon="@drawable/ic_favorite_black"
             android:title="Favorite" />
         <item
             android:id="@+id/nav_about"
+            android:icon="@drawable/ic_info_black_24dp"
             android:title="About Us" />
         <item
             android:id="@+id/nav_contact"
+            android:icon="@drawable/ic_contact_phone_black_24dp"
             android:title="Contact" />
     </group>
 
