--- a/App/Bioscopify/app/src/main/res/layout/fragment_ticket_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/fragment_ticket_select.xml
@@ -179,13 +179,13 @@
         app:layout_constraintTop_toBottomOf="@+id/seniorTicketsEt" />
 
     <Button
-        android:id="@+id/selectSeetsBtn"
+        android:id="@+id/selectSeatsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Select seets"
+        android:text="Select seats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/totalPriceTv" />
