--- a/App/Bioscopify/app/src/main/res/layout/gridview_view_item.xml
+++ b/App/Bioscopify/app/src/main/res/layout/gridview_view_item.xml
@@ -14,6 +14,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
+            android:background="@android:drawable/dialog_holo_light_frame"
             android:cropToPadding="true"
             android:scaleType="centerCrop"
             app:srcCompat="@android:color/background_light" />
