--- a/App/Bioscopify/app/src/main/res/layout/nav_header_main.xml
+++ b/App/Bioscopify/app/src/main/res/layout/nav_header_main.xml
@@ -21,6 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="Bioscopify"
@@ -29,7 +30,8 @@
 
         <ImageView
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
             android:scaleType="centerInside"
             android:src="@drawable/bioscopify_logo_resized"
