--- a/App/Bioscopify/app/src/main/res/layout/fragment_ticket_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/fragment_ticket_select.xml
@@ -185,6 +185,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:onClick="onClick"
         android:text="Select seats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
