--- a/App/Bioscopify/app/src/main/res/layout/fragment_favorite.xml
+++ b/App/Bioscopify/app/src/main/res/layout/fragment_favorite.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <GridView
-            android:id="@+id/movieListGrid2"
+            android:id="@+id/movieListFavorite"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
