--- a/App/Bioscopify/app/src/main/res/layout/activity_seat_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/activity_seat_select.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,22 +35,25 @@
     <GridView
         android:id="@+id/gbSeatSelect"
         android:layout_width="0dp"
-        android:layout_height="352dp"
-        android:layout_marginTop="92dp"
+        android:layout_height="382dp"
+        android:layout_marginTop="84dp"
+        android:numColumns="6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btNextSeatScreen"
+        android:id="@+id/btNextSeatscreen"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Betalen"
-        android:numColumns="6"
+        android:text="Pay Now"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gbSeatSelect" />
+
 </android.support.constraint.ConstraintLayout>
