--- a/App/Bioscopify/app/src/main/res/layout/activity_ticket_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/activity_ticket_select.xml
@@ -179,7 +179,7 @@
         app:layout_constraintTop_toBottomOf="@+id/seniorTicketsEt" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnTicketSelect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
