Update: EditText weggehaald uit ticketselect

--- a/App/Bioscopify/app/src/main/res/layout/activity_ticket_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/activity_ticket_select.xml
@@ -64,11 +64,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="Junior 0-11"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/juniorTicketsEt" />
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <TextView
         android:id="@+id/normalTv"
@@ -76,11 +76,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="Normal 12+"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/normalTicketsEt" />
+        app:layout_constraintTop_toBottomOf="@+id/juniorTv" />
 
     <TextView
         android:id="@+id/seniorTv"
@@ -88,11 +88,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="Senior 65+"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/seniorTicketsEt" />
+        app:layout_constraintTop_toBottomOf="@+id/normalTv" />
 
     <TextView
         android:id="@+id/juniorPriceTv"
@@ -121,62 +121,15 @@
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/seniorTv" />
 
-    <EditText
-        android:id="@+id/juniorTicketsEt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text="0"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/juniorPriceTv"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
-
-    <EditText
-        android:id="@+id/normalTicketsEt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text="0"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/normalPriceTv"
-        app:layout_constraintTop_toBottomOf="@+id/juniorTicketsEt" />
-
-    <EditText
-        android:id="@+id/seniorTicketsEt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text="0"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/seniorPriceTv"
-        app:layout_constraintTop_toBottomOf="@+id/normalTicketsEt" />
-
     <TextView
         android:id="@+id/totalPriceTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:text="€ Total"
-        app:layout_constraintEnd_toStartOf="@+id/seniorTicketsEt"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/seniorTicketsEt" />
+        app:layout_constraintTop_toBottomOf="@+id/seniorPriceTv" />
 
     <Button
         android:id="@+id/btnTicketSelect"
