updated android manifest and classes PayOrder, Processing and ConfirmActivity

--- a/App/Bioscopify/app/src/main/res/layout-land/payorder_activity.xml
+++ b/App/Bioscopify/app/src/main/res/layout-land/payorder_activity.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/Paymentmethod_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -37,7 +37,7 @@
             android:id="@+id/ideal_iv"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/Paymentmethod_tv"
             android:layout_marginEnd="47dp"
             android:layout_marginTop="15dp"
             android:layout_toStartOf="@+id/ideal_btn"
@@ -66,7 +66,7 @@
             android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/paypal_iv"
-            android:layout_alignEnd="@+id/textView"
+            android:layout_alignEnd="@+id/Paymentmethod_tv"
             android:layout_marginEnd="41dp"
             android:onClick="PaymentClick"
             android:text="IDeal" />
