--- a/App/Bioscopify/app/src/main/res/layout/fragment_contact.xml
+++ b/App/Bioscopify/app/src/main/res/layout/fragment_contact.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="16dp"
         android:text="Call 0658830782"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/Paymentmethod_tv"
         app:layout_constraintTop_toBottomOf="@+id/txt_sunday" />
 
     <TextView
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_saturday" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Paymentmethod_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
