--- a/App/Bioscopify/app/src/main/res/layout/payorder_activity.xml
+++ b/App/Bioscopify/app/src/main/res/layout/payorder_activity.xml
@@ -21,12 +21,12 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="20dp"
             android:text="Choose your payment method"
+            android:textAlignment="center"
             android:textSize="25sp" />
 
         <ImageView
@@ -36,7 +36,7 @@
             android:layout_alignStart="@+id/textView"
             android:layout_below="@+id/textView"
             android:layout_marginStart="33dp"
-            android:layout_marginTop="79dp"
+            android:layout_marginTop="120dp"
             android:src="@drawable/ideal" />
 
         <ImageView
@@ -89,24 +89,39 @@
             android:text="Mastercard" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/movietitle_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="125dp"
-            android:layout_marginTop="95dp"
-            android:text="Total:"
-            android:textSize="15sp" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="65dp"
+            android:text="Movie" />
+
+        <TextView
+            android:id="@+id/ticket_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="92dp"
+            android:text="Tickets" />
 
         <TextView
             android:id="@+id/total_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/textView4"
-            android:layout_marginEnd="114dp"
-            android:text="TextView"
-            android:textSize="15sp" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="145dp"
+            android:text="Total" />
+
+        <TextView
+            android:id="@+id/time_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="118dp"
+            android:text="Time" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
