--- a/App/Bioscopify/app/src/main/res/layout/processing_activity.xml
+++ b/App/Bioscopify/app/src/main/res/layout/processing_activity.xml
@@ -11,7 +11,6 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,34 +21,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <TextView
-            android:id="@+id/textView3"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/logo_iv"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="14dp"
-            android:layout_marginStart="38dp"
-            android:text="Payment is processing"
-            android:textSize="24sp" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="31dp">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="30dp"
+                android:text="Payment is processing"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/logo_iv"
+                android:layout_width="50dp"
+                android:layout_height="75dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginHorizontal="5dp"
+                android:layout_toEndOf="@+id/textView3"
+                app:srcCompat="@drawable/bioscopify_logo_resized" />
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/processing_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView3"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="89dp"
+            android:layout_centerInParent="true"
             android:src="@drawable/icon" />
 
-        <ImageView
-            android:id="@+id/logo_iv"
-            android:layout_width="50dp"
-            android:layout_height="75dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="36dp"
-            android:layout_toEndOf="@+id/textView3"
-            app:srcCompat="@drawable/bioscopify_logo_resized" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
