--- a/App/Bioscopify/app/src/main/res/menu/action_bar_spinner_menu.xml
+++ b/App/Bioscopify/app/src/main/res/menu/action_bar_spinner_menu.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/spinner"
-        android:title="ActionBar Spinner"
-        app:actionViewClass="android.widget.Spinner"
-        android:background="#ff00"
-        app:showAsAction="always" />
+        android:id="@+id/mybutton"
+        android:title=""
+        app:showAsAction="always"
+        android:icon="@drawable/bioscopify_logo_resized" />
 </menu>
