--- a/App/Bioscopify/app/src/main/res/layout/activity_detail.xml
+++ b/App/Bioscopify/app/src/main/res/layout/activity_detail.xml
@@ -41,7 +41,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:autoSizeTextType="uniform"
         android:text="TextView"
+        android:textColor="@color/colorWhite"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -49,6 +51,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:shadowColor="#0b0b0b"
+        android:shadowRadius="2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
